# energokodros_aggregator_service

./: .dockerignore  .gitignore  Dockerfile  README.md  __main__.py  docker-entrypoint.sh  env_template  pyproject.toml  settings.py
aggregation_autostart/: __init__.py  commands.py
aggregator_controller/: __init__.py  aggregation_start_results.py  commands.py  config.py  controller.py  exceptions.py  logic.py  states.py
box_listening_controller/: __init__.py  box_listener_states.py  commands.py  config.py  controller.py  exceptions.py  logic.py
box_listening_suspender/: __init__.py  box_listener_states.py  commands.py  config.py  exceptions.py  logic.py  suspender.py
start_aggregation_request_communicator/: __init__.py  commands.py  communicator.py  config.py  exceptions.py  listener.py  logic.py
start_aggregation_request_listener/: __init__.py  commands.py  config.py  listener.py  logic.py
utils/: commands.py  config_base.py  current_state_retreiver.py  exceptions.py  types.py  utils.py
utils/aggregation_autostart/: config.py  logic.py
utils/redis/: __init__.py  channels.py  commands.py  exceptions.py  message.py  state.py
